--- a/p2.html
+++ b/p2.html
@@ -16,6 +16,6 @@
   <li style="color:DodgerBlue;">Pascal Language.</li>
   <li style="color:Tomato;">java language.</li>
 </ul>
-<img src="pic 7.jpg" alt="pic 7">
+<img src="pic 7.JPG" alt="pic 7">
 </body>
 </html>
